<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <data class=".databinding.ActivityMainBinding">
        <variable name="viewModel" type="com.xiaopo.flying.sticker.StickerViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.xiaopo.flying.sticker.StickerView
                android:id="@+id/sticker_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:activeIcons="@={viewModel.activeIcons}"
                app:borderColor="@color/sticker_border"
                app:iconColor="@android:color/black"
                app:bringToFrontCurrentSticker="true"
                app:canvasMatrix="@{viewModel.canvasMatrix}"
                app:constrained="@{viewModel.constrained}"
                app:currentIcon="@{viewModel.currentIcon}"
                app:currentMode="@{viewModel.currentMode}"
                app:gestureDetector="@{viewModel.gestureListener}"
                app:handlingSticker="@{viewModel.handlingSticker}"
                app:icons="@{viewModel.icons}"
                app:isCropActive="@{viewModel.isCropActive}"
                app:isLocked="@{viewModel.isLocked}"
                app:mustLockToPan="@{viewModel.mustLockToPan}"
                app:onTouchListener="@{viewModel.onTouchListener}"
                app:rotationEnabled="@{viewModel.rotationEnabled}"
                app:showAuxiliaryLines="false"
                app:showBorder="true"
                app:showIcons="true"
                app:stickers="@{viewModel.stickers}"
                app:viewModel="@{viewModel}" />

            <HorizontalScrollView
                android:id="@+id/toolbarHideShowUI"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/buttonMenu"
                        style="@style/ToolbarButton"
                        android:contentDescription="@string/menu"
                        app:srcCompat="@drawable/ic_more_vert_24" />

                    <ImageButton
                        android:id="@+id/buttonHideShowUI"
                        style="@style/ToolbarButton"
                        android:contentDescription="@string/hide_ui"
                        app:srcCompat="@drawable/ic_baseline_visibility_24" />
                </LinearLayout>
            </HorizontalScrollView>

            <HorizontalScrollView
                android:id="@+id/toolbarTop"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@id/toolbarHideShowUI"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/buttonNew"
                        style="@style/ToolbarButton"
                        android:contentDescription="@string/new_board"
                        app:srcCompat="@drawable/ic_note_add_black_24dp" />

                    <ImageButton
                        android:id="@+id/buttonOpen"
                        style="@style/ToolbarButton"
                        android:contentDescription="@string/open"
                        app:srcCompat="@drawable/ic_folder_open_black_24dp" />

                    <ImageButton
                        android:id="@+id/buttonSave"
                        style="@style/ToolbarButton"
                        android:contentDescription="@string/save"
                        app:srcCompat="@drawable/ic_save_black_24dp" />

                    <ImageButton
                        android:id="@+id/buttonSaveAs"
                        style="@style/ToolbarButton"
                        android:contentDescription="@string/save_as"
                        app:srcCompat="@drawable/ic_baseline_save_alt_24" />

                    <ImageButton
                        android:id="@+id/buttonUndo"
                        style="@style/ToolbarButton"
                        android:contentDescription="@string/undo"
                        android:enabled="@{viewModel.canUndo}"
                        android:alpha="@{viewModel.canUndo ? 1f : 0.4f}"
                        app:srcCompat="@drawable/ic_undo_24" />

                    <ImageButton
                        android:id="@+id/buttonRedo"
                        style="@style/ToolbarButton"
                        android:contentDescription="@string/redo"
                        android:enabled="@{viewModel.canRedo}"
                        android:alpha="@{viewModel.canRedo ? 1f : 0.4f}"
                        app:srcCompat="@drawable/ic_redo_24" />
                </LinearLayout>
            </HorizontalScrollView>

            <HorizontalScrollView
                android:id="@+id/toolbarBottom"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/buttonAdd"
                        style="@style/ToolbarButton"
                        android:contentDescription="@string/add_images"
                        app:srcCompat="@drawable/ic_add_box_black_24dp" />

                    <ImageButton
                        android:id="@+id/buttonPaste"
                        style="@style/ToolbarButton"
                        android:contentDescription="@string/paste"
                        app:srcCompat="@drawable/ic_content_paste_24" />

                    <ImageButton
                        android:id="@+id/buttonNote"
                        style="@style/ToolbarButton"
                        android:contentDescription="@string/add_note"
                        app:srcCompat="@drawable/ic_text_fields_24" />

                    <ImageButton
                        android:id="@+id/buttonDraw"
                        style="@style/ToolbarButton"
                        android:contentDescription="@string/draw"
                        app:srcCompat="@drawable/ic_edit_24" />

                    <ImageButton
                        android:id="@+id/buttonPicker"
                        style="@style/ToolbarButton"
                        android:contentDescription="@string/color_picker"
                        app:srcCompat="@drawable/ic_colorize_24" />

                    <ImageButton
                        android:id="@+id/buttonArrange"
                        style="@style/ToolbarButton"
                        android:contentDescription="@string/arrange_optimal"
                        app:srcCompat="@drawable/ic_dashboard_24" />

                    <ImageButton
                        android:id="@+id/buttonReset"
                        style="@style/ToolbarButton"
                        android:contentDescription="@string/fit_all"
                        app:srcCompat="@drawable/ic_center_focus_24" />

                    <ImageButton
                        android:id="@+id/buttonDuplicate"
                        style="@style/ToolbarButton"
                        android:contentDescription="@string/duplicate"
                        app:srcCompat="@drawable/ic_baseline_content_copy_24" />

                    <ImageButton
                        android:id="@+id/buttonDelete"
                        style="@style/ToolbarButton"
                        android:contentDescription="@string/delete"
                        app:srcCompat="@drawable/ic_delete_black_24dp" />

                    <ImageButton
                        android:id="@+id/buttonLock"
                        style="@style/ToolbarButton"
                        android:selected="@{safeUnbox(viewModel.isLocked)}"
                        android:contentDescription="@string/lock_canvas"
                        app:srcCompat="@drawable/ic_lock_outline_black_24dp" />

                    <ImageButton
                        android:id="@+id/buttonCrop"
                        style="@style/ToolbarButton"
                        android:selected="@{safeUnbox(viewModel.isCropActive)}"
                        android:contentDescription="@string/crop"
                        app:srcCompat="@drawable/ic_crop_black_24dp" />

                    <ImageButton
                        android:id="@+id/buttonRotate"
                        style="@style/ToolbarButton"
                        android:selected="@{safeUnbox(viewModel.rotationEnabled)}"
                        android:contentDescription="@string/rotate"
                        app:srcCompat="@drawable/ic_rotate" />

                    <ImageButton
                        android:id="@+id/buttonResetCrop"
                        style="@style/ToolbarButton"
                        android:contentDescription="@string/reset_crop"
                        app:srcCompat="@drawable/ic_crop_rotate_black_24dp" />

                    <ImageButton
                        android:id="@+id/buttonResetZoom"
                        style="@style/ToolbarButton"
                        android:contentDescription="@string/reset_transform"
                        app:srcCompat="@drawable/ic_zoom_out_map_black_24dp" />

                </LinearLayout>
            </HorizontalScrollView>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/progressBarHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#66000000"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

            <TextView
                android:id="@+id/progressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </FrameLayout>
</layout>
